[project]
name = "all_daemons"
description = "A collection of small agents, tools, and experiments for Paradigm Eden / Echolace"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["daemons", "agents", "eden", "echolace"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "flake8>=6.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "Riven/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--ignore=all_daemons -v"
filterwarnings = [
    "ignore::SyntaxWarning",
]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "all_daemons",
    "*.pyc",
    ".pytest_cache",
]
